# NTP-FitLife

./: README.md  go.work  go.work.sum
api-gateway/: Makefile  go.mod  go.sum  main.go  policy.csv
block-microservice/: .env  Cargo.toml
block-microservice/src/: main.rs
block-microservice/src/block/: models.rs  services.rs
comment-microservice/: Makefile  api.go  dto.go  go.mod  go.sum  main.go  storage.go  types.go
complaint-microservice/: .env  Cargo.toml
complaint-microservice/src/: main.rs
complaint-microservice/src/complaint/: models.rs  services.rs
frontend/: angular.json  package-lock.json  package.json  proxy.config.json  tsconfig.json
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/all-workouts/: all-workouts.component.html  all-workouts.component.spec.ts  all-workouts.component.ts
frontend/src/app/calendar/: calendar.component.html  calendar.component.ts
frontend/src/app/coach-requests/: coach-requests.component.html  coach-requests.component.spec.ts  coach-requests.component.ts
frontend/src/app/comment/: comment.service.ts
frontend/src/app/complaint/: complaint.service.ts
frontend/src/app/exercise/: exercise.component.html  exercise.component.ts
frontend/src/app/interceptor/: interceptor.service.ts
rating-microservice/: Makefile  api.go  dto.go  go.mod  main.go  storage.go  types.go
user-microservice/: Makefile  api.go  dto.go  go.mod  go.sum  main.go  storage.go  types.go
workout-microservice/: Makefile  api.go  dto.go  go.mod  main.go  storage.go  types.go
(+37 files in other folders)
